--- a/Main/SEToolbox/SEToolbox/Interop/SubtypeId.tt
+++ b/Main/SEToolbox/SEToolbox/Interop/SubtypeId.tt
@@ -27,7 +27,7 @@ namespace SEToolbox.Interop
 <#
         
 		// Open the file @"C:\Program Files (x86)\Steam\SteamApps\common\SpaceEngineers\Content\Data\CubeBlocks.sbc";
-		var appPath = ToolboxUpdater.GetApplicationFilePath();
+		var appPath = ToolboxUpdater.GetGameRegistryFilePath();
 		if (appPath == null)
 		{
 			Write("#warning Could not generate enums, because Space Engineers is not installed on the Developer machine. \r\n\r\n");
