--- a/Main/SEToolbox/SEToolbox/Views/ControlPosition.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlPosition.xaml
@@ -11,17 +11,17 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <TextBox Grid.Column="0" ToolTip="X">
+        <TextBox Grid.Column="0" ToolTip="X" AutomationProperties.AutomationId="PositionX">
             <TextBox.Text>
                 <Binding Path="PositionX" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
             </TextBox.Text>
         </TextBox>
-        <TextBox Grid.Column="1" ToolTip="Y">
+        <TextBox Grid.Column="1" ToolTip="Y" AutomationProperties.AutomationId="PositionY">
             <TextBox.Text>
                 <Binding Path="PositionY" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
             </TextBox.Text>
         </TextBox>
-        <TextBox Grid.Column="2" ToolTip="Z">
+        <TextBox Grid.Column="2" ToolTip="Z" AutomationProperties.AutomationId="PositionZ">
             <TextBox.Text>
                 <Binding Path="PositionZ" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
             </TextBox.Text>
