--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -40,6 +40,7 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Menu Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" DockPanel.Dock="Top">
@@ -120,7 +121,19 @@
                         <MenuItem Header="Station/Ship">
                             <MenuItem Header="To Ship" Command="{Binding ConvertToShipCommand}" ToolTip="Change a Station into a Large Ship." />
                             <MenuItem Header="To Station" Command="{Binding ConvertToStationCommand}" ToolTip="Change a Large Ship into a Station." />
-                            <MenuItem Header="Reorient Station to Axis" Command="{Binding ReorientStationCommand}" ToolTip="Reorients a Station to the major axis, and corrects the position to match standard Space Engineers block locations." />
+                        </MenuItem>
+                        <MenuItem Header="Rotate">
+                            <MenuItem.Icon>
+                                <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=replace2}" />
+                            </MenuItem.Icon>
+                            <MenuItem Header="Reorient Station to Axis" Command="{Binding ReorientStationCommand}" ToolTip="Reorients to the accepted single orientation for a Station, and corrects the position to match standard Space Engineers block locations." />
+                            <Separator/>
+                            <MenuItem Header="Rotate cubes backward-down around X axis (+90 Pitch)" Command="{Binding RotateCubesPitchPositiveCommand}"/>
+                            <MenuItem Header="Rotate cubes forward-down around X axis (-90 Pitch)" Command="{Binding RotateCubesPitchNegativeCommand}"/>
+                            <MenuItem Header="Rotate cubes anti-clockwise around Y axis (+90 Yaw)" Command="{Binding RotateCubesYawPositiveCommand}"/>
+                            <MenuItem Header="Rotate cubes clockwise around Y axis (-90 Yaw)" Command="{Binding RotateCubesYawNegativeCommand}"/>
+                            <MenuItem Header="Rotate cubes right-down around Z axis (+90 Roll)" Command="{Binding RotateCubesRollPositiveCommand}"/>
+                            <MenuItem Header="Rotate cubes left-down around Z axis (-90 Roll)" Command="{Binding RotateCubesRollNegativeCommand}"/>
                         </MenuItem>
                         <!--<MenuItem Header="Ladder to Passage" Command="{Binding ConvertLadderToPassageCommand}"/>-->
                     </MenuItem>
@@ -177,6 +190,8 @@
                 <TextBlock Grid.Row="11" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0.00} Kg'}" />
                 <TextBlock Grid.Row="12" Grid.Column="0" Margin="4 0 4 0" Text="Blocks:"/>
                 <TextBlock Grid.Row="12" Grid.Column="1" VerticalAlignment="Center" Text="{Binding BlockCount, StringFormat='{}{0:#,###0}'}" />
+                <TextBlock Grid.Row="13" Grid.Column="0" Margin="4 0 4 0" Text="Cockpit Orientation:"/>
+                <TextBlock Grid.Row="13" Grid.Column="1" VerticalAlignment="Center" Text="{Binding CockpitOrientation}" />
             </Grid>
         </TabItem>
         <TabItem Header="Components">
